--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -4,16 +4,16 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #dce7ff;
-    font-family: "Ubuntu";
+    background-color: #b5bfd7;
+    font-family: "Ubuntu", sans-serif;
 }
 
 .app{
     background-color: #fff;
-    box-shadow: 0px 0px 17px 3px rgba(0,0,0,0.4);
+    box-shadow: 0px 0px 17px 3px rgba(153, 174, 227, 0.56);
     width: 600px;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 4px;
 }
 
 .header-info{
