--- a/src/components/ mass-action/mass-action.css
+++ b/src/components/ mass-action/mass-action.css
@@ -1,7 +1,7 @@
 .mass-action{
     display: flex;
     align-items: center;
-    margin-bottom: 15px;
+    margin-left: auto;
 }
 
 .clear-complete{
